<resources>
    <string name="app_name">TravelerConnect</string>
    <string name="user_name">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>

    <string name="bio">Bio</string>
    <string name="phone_number">Phone number</string>
    <string name="current_location">Visiting</string>
    <string name="gender">Gender</string>
    <string name="add_interest">Add interests</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <!--
    activity_main_user_page
    -->
    <string name="lookup">Look</string>
    <string name="myFriend">My Friend</string>
    <string name="friendRequestBox">Friend Request Box</string>
    <string name="logout">Logout</string>

    <string name="Back">Back</string>


    <!--
    activity_main_look
    -->
    <string name="user">User</string>

    <string-array name="gender_options">
        <item>female</item>
        <item>male</item>
        <item>nonbinary</item>
    </string-array>

    <!--Interests-->
    <string name="bars">Bars</string>
    <string name="beaches">Beaches</string>
    <string name="clubs">Clubs</string>
    <string name="extreme_sports">Extreme Sports</string>
    <string name="athletics">Athletics</string>
    <string name="hiking">Hiking</string>
    <string name="sightseeing">Sightseeing</string>
    <string name="close">close</string>
</resources>
